--- a/build-chip/platformio.ini
+++ b/build-chip/platformio.ini
@@ -13,5 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps =
-    bblanchon/ArduinoJson@^6.21.0
+lib_deps = 
+	bblanchon/ArduinoJson@^6.21.0
+	gilmaimon/ArduinoWebsockets@^0.5.4
