--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@
 FIREFLY_SERVER_PORT=8000
 YANDEX_SERVER_PORT=8001
 
+# Настройки Devices Telegram-bot
+TELEGRAM_DEVICES_BOT_TOCKEN="8248086356:AAFxuPlB-z4SLiYwb22y_KIb6y8fXwlRjf8"
+
 #База данных
 DB_URL="localhost"
 DB_USER="fireflyproject"
