--- a/apps/node-server/package.json
+++ b/apps/node-server/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "server",
+  "name": "firefly-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
