--- a/packages/user_devices/package.json
+++ b/packages/user_devices/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@project/middleware",
+  "name": "@project/user-devices",
   "version": "1.0.0",
   "description": "",
   "type": "module",
