--- a/.env
+++ b/.env
@@ -1,1 +1,16 @@
+#Настройка серверов
+FIREFLY_SERVER_PORT=8000
+YANDEX_SERVER_PORT=8001
 
+# Настройки Devices Telegram-bot
+TELEGRAM_DEVICES_BOT_TOCKEN="8248086356:AAFxuPlB-z4SLiYwb22y_KIb6y8fXwlRjf8"
+
+#База данных
+DB_URL="localhost"
+DB_USER="fireflyproject"
+DB_PASSWORD="7zih8qFVCltQWmA*egti"
+DB_NAME="main"
+#DB_URL="109.68.214.90"
+#DB_USER="admin"
+#DB_PASSWORD="HyInyBm2sgC%G)Q8thn%"
+#DB_NAME="main"
